
   Version 0.7.5
 - Renamed "install-locales" to "install-data" build target.

   Version 0.7.4
 + 0.7.4 was finished at about Thu Dec 27 21:35:34 CET 2012.
 - Minor fix for libsndifsdl build target.

   Version 0.7.3
 + 0.7.3 was finished at about Mon Sep 17 22:14:52 CEST 2012.
 - Adapted to new autoconf/automake build process.

   Version 0.7.2
 + 0.7.2 was finished at about Fri Mar 9 21:01:12 CET 2012.
 - Fixed missing $(DESTDIR) variable -- should already have been present
   since version 0.7.1.

   Version 0.7.1
 + 0.7.1 was finished at about Sun Nov 6 22:44:17 CET 2011.
 - Fixed missing "override" statments for CFLAGS in Makefiles.
 - Fixed $(DESTDIR) evaluation in config.[default|macports].mk.
 - Adapted Makefiles and configuration to use standard GNU Makefile variables
   instead of INSTALL_PATH and FIZMO_BIN_DIR.

   Version 0.7.0
 + 0.7.0 was finished at about Sun Sep 18 08:41:18 CEST 2011.
 + The "libsndifsdl" library has been taken out of fizmo version 0.6 and
   built to form a separate library.
 - Implemented configuration option handling.

   Version 0.6.1
 + 0.6.1 was finished at about Mon Mar 30 22:15:04 CEST 2009.
 - Implemented new ENABLE_AIFF_FOR_SOUND_SDL variable in config files. This
   allows the sound-sdl-interface to at least play Infocom .snd files when
   no libsndfile is available.

   Version 0.6.0
 + 0.6.0 was finished at about Wed Mar 25 21:47:06 CET 2009.
 + This marks the point for the first public beta release
 - Implemented new "*.snd" search method: Generalized for all files, not
   only Lurking Horror and Sherlock, tries upper- and lowercase.

   Version 0.5.3
 + 0.5.3 was finished at about Wed Mar 11 21:34:59 CET 2009.
 - Re-built SDL-Sound system (implemented sound effect stack, better sound-
   has-finished-detection and many, many fixes).
 - Added support for AIFF-sounds in blorb files.

   Version 0.5.1
 + 0.5.1 was finished at about Di 4 Nov 2008 21:48:29 CET.