@@ -1,6 +1,7 @@
 
    Version 0.7.5
  - Renamed "install-locales" to "install-data" build target.
+ - Adapted to new readchar function names in file system interface.
 
    Version 0.7.4
  + 0.7.4 was finished at about Thu Dec 27 21:35:34 CET 2012.
